Build misc-test from its own package dir, instead of packaging.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -79,6 +79,7 @@ lsb_pkg_subdir_projects = { "app-checker": [],
                             "lsbappchk-sh": [],
                             "lsbsi-tools": [],
                             "makelsbpkg": [],
+                            "misc-test": [],
                             "olver-core-tests": [],
                             "perl-test": [],
                             "printing-test": ["runtime-test"],
@@ -96,13 +97,7 @@ lsb_pkg_subdir_projects = { "app-checker": [],
 # "Packaging" projects.  These are built out of a tree called "packaging".
 # The name of the project in packaging is the first value of each tuple,
 # while the repository used to build it is the second.
-lsb_packaging_projects = [("lsbappchk", "misc-test"),
-                          ("lsbarchk", "misc-test"),
-                          ("lsbcmdchk", "misc-test"),
-                          ("lsbdynchk", "misc-test"),
-                          ("lsbdev-runner", "build_env"),
-                          ("lsblibchk", "misc-test"),
-                          ("lsbpkgchk", "misc-test"),
+lsb_packaging_projects = [("lsbdev-runner", "build_env"),
                           ("lsb-xdg-utils", None)]
 
 lsb_arch_indep_projects = ["lsb-setup", "lsbappchk-perl", "lsbappchk-python", 
@@ -120,8 +115,7 @@ lsb_dependencies = { "tet-harness": ["appbat", "azov-qt3-tests",
                                      "xts5-test"],
                      "qmtest-harness": ["libstdcpp-test"],
                      "libbat": ["appbat"],
-                     "lsbappchk": ["appbat"],
-                     "lsbpkgchk": ["appbat"]}
+                     "misc-test": ["appbat"]}
 
 # Job locking.  We don't limit the number of concurrent jobs per
 # slave in the slave config; instead, we only allow one build at a time
