Move build checks for appbat after the builds.
This prevents the "whack-a-mole" problem when we have multiple build
issues in appbat; we fix all the appbat build problems, only to
find a new set in desktop that wasn't reported before, etc.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -802,25 +802,17 @@ for arch in lsb_archs:
                                   workdir="appbat", name="build-appbat", 
                                   timeout=build_timeout_seconds))
     appbat.addStep(
-        lfbuildbot.LSBBuildCommand(command=["make", "check-appbat"],
-                                   workdir="appbat",
-                                   name="check-appbat", haltOnFailure=True))
-    appbat.addStep(
         lfbuildbot.LSBBuildAppbat(command="make desktop ENTITYCHECK_QUIET=-q", 
                                   workdir="appbat", name="build-desktop", 
                                   timeout=build_timeout_seconds))
-    appbat.addStep(
-        lfbuildbot.LSBBuildCommand(command=["make", "check-desktop"],
-                                   workdir="appbat",
-                                   name="check-desktop", haltOnFailure=True))
     appbat.addStep(
         lfbuildbot.LSBBuildAppbat(command="make addons ENTITYCHECK_QUIET=-q", 
                                   workdir="appbat", name="build-addons",
                                   timeout=build_timeout_seconds))
     appbat.addStep(
-        lfbuildbot.LSBBuildCommand(command=["make", "check-addons"],
-                                   workdir="appbat",
-                                   name="check-addons", haltOnFailure=True))
+        lfbuildbot.LSBBuildCommand(
+            command="make check-appbat; make check-desktop; make check-addons",
+            workdir="appbat", name="check-builds", haltOnFailure=True))
     appbat.addStep(
         lfbuildbot.LSBBuildCommand(command="cd rpm && make",
                                    name="build-pkg", workdir="appbat",
