--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -810,7 +810,7 @@ for arch in lsb_archs:
                                   timeout=build_timeout_seconds))
     appbat.addStep(
         lfbuildbot.LSBBuildAppbat(command="make addons ENTITYCHECK_QUIET=-q", 
-                                  env={"PATH": "/opt/lsb/bin:/opt/lsb/appbat/bin:/bin:/usr/bin:/usr/local/bin",
+                                  env={"PATH": "/opt/lsb/bin:/opt/lsb/appbat/bin:/bin:/usr/bin:/usr/local/bin"},
                                   workdir="appbat", name="build-addons",
                                   timeout=build_timeout_seconds))
     appbat.addStep(
