Split check steps again to get the fail modes right.
We want the build to fail if any of the check steps fail, not if only
the last one fails.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -815,8 +815,16 @@ for arch in lsb_archs:
                                   timeout=build_timeout_seconds))
     appbat.addStep(
         lfbuildbot.LSBBuildCommand(
-            command="make check-appbat; make check-desktop; make check-addons",
-            workdir="appbat", name="check-builds", haltOnFailure=True))
+            command=["make", "check-appbat"], workdir="appbat",
+            name="check-appbat", haltOnFailure=True, alwaysRun=True))
+    appbat.addStep(
+        lfbuildbot.LSBBuildCommand(
+            command=["make", "check-desktop"], workdir="appbat",
+            name="check-desktop", haltOnFailure=True, alwaysRun=True))
+    appbat.addStep(
+        lfbuildbot.LSBBuildCommand(
+            command=["make", "check-addons"], workdir="appbat",
+            name="check-addons", haltOnFailure=True, alwaysRun=True))
     appbat.addStep(
         lfbuildbot.LSBBuildCommand(command="cd rpm && make",
                                    name="build-pkg", workdir="appbat",
