--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -140,7 +140,9 @@ branch_watch_list = { "4.0": [ "appbat", "azov-qt3-tests", "azov-qt4-tests",
                                "t2c-cpp-tests", "t2c-desktop-tests", 
                                "xml-test", "xts5-test" ],
                       "4.1": [ "appbat", "azov-qt3-tests", "desktop-test",
-                               "misc-test", "t2c-alsa-tests" ] }
+                               "libstdcpp-test", "misc-test", "perl-test",
+                               "printing-test", "python-test", "runtime-test", 
+                               "t2c-alsa-tests", "t2c-desktop-tests"] }
 
 # Values calculated from configured variables.
 stable_timer_seconds = stable_timer_hours * 60 * 60
