First run at an independent build slave network for devchk.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -150,6 +150,12 @@ slow_stable_timer_seconds = slow_stable_timer_hours * 60 * 60
 bzr_timeout_seconds = bzr_timeout_hours * 60 * 60
 build_timeout_seconds = build_timeout_hours * 60 * 60
 
+# "devchk build slaves".  These are build slaves that only build devchk.
+# We do this because devchk requires a lot of packages that can interfere
+# with clean builds of everything else.  It's also useful to have devchk
+# run against a number of different native build environments.
+devchk_build_slaves = ["fedora-x86", "fedora-x86_64"]
+
 # Helper functions
 
 def add_pre_dependency_triggers(project, arch, builder):
@@ -330,7 +336,19 @@ sch_jobdir = lfbuildbot.MultiScheduler(
     indep_prj=lsb_arch_indep_projects,
     indep_arch=lsb_buildslave_arch_indep_arch)
 
-c['schedulers'] = [sch_jobdir]
+# Schedulers for devchk.  The builders and build slaves are entirely
+# separate from the rest of the builders and slaves, and so need their
+# own scheduler.
+
+devchk_builder_list = ["devchk-" + x for x in devchk_build_slaves]
+sch_devchk = scheduler.Scheduler(name="sch-devchk-" + arch,
+                                 branch="lsb/devel/devchk",
+                                 builderNames=devchk_builder_list,
+                                 treeStableTimer=stable_timer_seconds)
+
+# Set up first static set of schedulers.
+
+c['schedulers'] = [sch_jobdir, sch_devchk]
 
 # The rest of the schedulers (except the weekly one) react to events, 
 # such as a previous build succeeding or a change in version control,
@@ -344,16 +362,12 @@ for arch in lsb_archs:
             name="sch-appbat-" + arch, branch="lsb/devel/appbat",
             builderNames=["appbat-" + arch], 
             treeStableTimer=slow_stable_timer_seconds)
-        sch_devchk = scheduler.Scheduler(name="sch-devchk-" + arch,
-                                         branch="lsb/devel/devchk",
-                                         builderNames=["devchk-" + arch],
-                                         treeStableTimer=stable_timer_seconds)
         sch_sdk = scheduler.Scheduler(name="sch-build-sdk-" + arch,
                                       branch="lsb/devel/build_env",
                                       builderNames=["build-sdk-" + arch],
                                       treeStableTimer=stable_timer_seconds)
 
-        c['schedulers'].extend([sch_sdk, sch_appbat, sch_devchk])
+        c['schedulers'].extend([sch_sdk, sch_appbat])
 
 # Package subdir schedulers.
 
@@ -865,12 +879,15 @@ for arch in lsb_archs:
           'builddir': 'appbat-' + arch, 'factory': appbat,
           'category': 'lsb', 'locks': locks })
 
+# Builds for devchk.  These are handled with a completely different set
+# of builders and build slaves, because they depend on and test a number
+# of native distro features, and can/should be run as tests against a
+# diverse set of distros.
+
+for build_slave in devchk_build_slaves:
     devchk = factory.BuildFactory()
 
-    devchk.addStep(lfbuildbot.LSBReloadSDK(name="reload-sdk",
-                                           locks=[pkg_lock]))
-
-    add_pre_dependency_triggers("devchk", arch, devchk)
+    devchk.addStep(lfbuildbot.LSBReloadSDK(name="reload-sdk"))
 
     devchk.addStep(Bzr(baseURL=bzr_toplevel, 
                        defaultBranch="lsb/devel/devchk",
@@ -896,20 +913,15 @@ for arch in lsb_archs:
                                 workdir="devchk", name="pack-results"))
     devchk.addStep(
         FileUpload(slavesrc="../results.tar.gz", 
-                   masterdest=WithProperties("devchk-%%(result_type:-results)s-%s.tar.gz" % arch),
+                   masterdest=WithProperties("devchk-%%(result_type:-results)s-%s.tar.gz" % build_slave),
                    workdir="devchk", name="upload-results", 
                    flunkOnFailure=False))
-    add_post_dependency_triggers("devchk", arch, devchk)
-
-    if "devchk" in lsb_dependencies:
-        locks = [dep_job_lock.access('counting')]
-    else:
-        locks = [nondep_job_lock.access('counting')]
 
     lsb_builds.append(
-        { 'name': 'devchk-' + arch, 'slavenames': buildslaves,
-          'builddir': 'devchk-' + arch, 'factory': devchk,
-          'category': 'lsb', 'locks': locks })
+        { 'name': 'devchk-' + build_slave,
+          'slavenames': ["devchk-" + build_slave],
+          'builddir': 'devchk-' + build_slave, 'factory': devchk,
+          'category': 'lsb' })
 
 # Final build configuration
 
