--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -348,7 +348,7 @@ sch_devchk = scheduler.Scheduler(name="sch-devchk",
 
 # SDK scheduler.
 
-sdk_builder_list = ["build-sdk" + x for x in lsb_archs + devchk_build_slaves]
+sdk_builder_list = ["build-sdk-" + x for x in lsb_archs + devchk_build_slaves]
 sch_sdk = scheduler.Scheduler(name="sch-build-sdk",
                               branch="lsb/devel/build_env",
                               builderNames=sdk_builder_list,
