Update the SDK properly on devchk build slaves.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -904,7 +904,8 @@ for arch in lsb_archs:
 for build_slave in devchk_build_slaves:
     devchk = factory.BuildFactory()
 
-    devchk.addStep(lfbuildbot.LSBReloadSDK(name="reload-sdk"))
+    devchk.addStep(lfbuildbot.LSBReloadSDK(name="reload-sdk",
+                                           slave_id=build_slave))
 
     devchk.addStep(Bzr(baseURL=bzr_toplevel, 
                        defaultBranch="lsb/devel/devchk",
