--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -103,19 +103,22 @@ lsb_packaging_projects = [("lsbdev-runner", "build_env"),
 lsb_arch_indep_projects = ["lsb-setup", "lsbappchk-perl", "lsbappchk-python", 
                            "lsbappchk-sh", "perl-test", "task-pkgs"]
 
-# Dependencies.  The key is the package depended on, and the values are
-# the list of packages which depend on it.  For example, if you need "foo"
-# to build "bar", you'd do "foo": ["bar"].  Dependencies cannot be recursive,
-# as this could cause builder deadlocks.
-lsb_dependencies = { "tet-harness": ["appbat", "azov-qt3-tests", 
-                                     "azov-qt4-tests", "azov-xml2-tests", 
-                                     "desktop-test", "printing-test", 
-                                     "runtime-test", "t2c-cpp-tests", 
-                                     "t2c-desktop-tests", "t2c-runtime-tests",
-                                     "xts5-test"],
-                     "qmtest-harness": ["libstdcpp-test"],
-                     "libbat": ["appbat"],
-                     "misc-test": ["appbat"]}
+# Dependencies.  The key is the package being built, and the values are
+# the list of packages which it needs to build.  For example, if you need
+# "foo" to build "bar", you'd do "bar": ["foo"].  Dependencies cannot be
+# recursive, as this could cause builder deadlocks.
+lsb_dependencies = { "appbat": ["tet-harness", "libbat", "misc-test"],
+                     "libstdcpp-test": ["qmtest-harness"],
+                     "azov-qt3-tests": ["tet-harness"],
+                     "azov-qt4-tests": ["tet-harness"],
+                     "azov-xml2-tests": ["tet-harness"],
+                     "desktop-test": ["tet-harness"],
+                     "printing-test": ["tet-harness"],
+                     "runtime-test": ["tet-harness"],
+                     "t2c-cpp-tests": ["tet-harness"],
+                     "t2c-desktop-tests": ["tet-harness"],
+                     "t2c-runtime-tests": ["tet-harness"],
+                     "xts5-test": ["tet-harness"] }
 
 # Job locking.  We don't limit the number of concurrent jobs per
 # slave in the slave config; instead, we only allow one build at a time
@@ -165,42 +168,49 @@ def add_pre_dependency_triggers(project, arch, builder):
     remove_old_libbat_command = \
         "rpm -qa --queryformat '%{NAME}\\n' | grep libbat | " + \
         "xargs sudo rpm -e"
-    for dep in lsb_dependencies:
-        if project in lsb_dependencies[dep]:
-            # First, see if we need this from devel always.
-            always_devel = True
-            for branch in branch_watch_list.keys():
-                if dep in branch_watch_list[branch]:
-                    always_devel = False
-                    break
-
-            # If this is libbat, add a step to remove all libbat-like
-            # packages and force not-devel.
-            if dep == "libbat":
-                builder.addStep(ShellCommand(command=remove_old_libbat_command,
-                                             name="remove-old-libbat",
-                                             flunkOnFailure=False,
-                                             haltOnFailure=False,
-                                             workdir="deps"))
+    for dep in lsb_dependencies[project]:
+        # First, see if we need this from devel always.
+        always_devel = True
+        for branch in branch_watch_list.keys():
+            if dep in branch_watch_list[branch]:
                 always_devel = False
+                break
 
-            if always_devel:
-                unpack_command="tar xzvf ../../saved/devel/%s-%s.tar.gz" % (dep, arch)
-            else:
-                unpack_command=WithProperties("tar xzvf ../../saved/%%(branch_name:-devel)s/%s-%s.tar.gz" % (dep, arch))
-            builder.addStep(ShellCommand(command=unpack_command, 
-                                         name="unpack-dep-%s-%s" % (dep, arch),
+        # If this is libbat, add a step to remove all libbat-like
+        # packages and force not-devel.
+        if dep == "libbat":
+            builder.addStep(ShellCommand(command=remove_old_libbat_command,
+                                         name="remove-old-libbat",
+                                         flunkOnFailure=False,
+                                         haltOnFailure=False,
                                          workdir="deps"))
-            builder.addStep(ShellCommand(
-                command=pkg_install_command,
-                name="install-dep-%s-%s" % (dep, arch), locks=[pkg_lock],
-                workdir="deps", haltOnFailure=True))
-            builder.addStep(ShellCommand(
-                command=["rm", "-rf", "../deps"],
-                name="remove-dep-%s-%s" % (dep, arch), alwaysRun=True))
+            always_devel = False
+
+        if always_devel:
+            unpack_command="tar xzvf ../../saved/devel/%s-%s.tar.gz" % (dep, arch)
+        else:
+            unpack_command=WithProperties("tar xzvf ../../saved/%%(branch_name:-devel)s/%s-%s.tar.gz" % (dep, arch))
+        builder.addStep(ShellCommand(command=unpack_command, 
+                                     name="unpack-dep-%s-%s" % (dep, arch),
+                                     workdir="deps"))
+        builder.addStep(ShellCommand(
+            command=pkg_install_command,
+            name="install-dep-%s-%s" % (dep, arch), locks=[pkg_lock],
+            workdir="deps", haltOnFailure=True))
+        builder.addStep(ShellCommand(
+            command=["rm", "-rf", "../deps"],
+            name="remove-dep-%s-%s" % (dep, arch), alwaysRun=True))
 
 def add_post_dependency_triggers(project, arch, builder):
-    if project in lsb_dependencies:
+    # Figure out if the project is a dependency of something.
+    dep_found = False
+    for dep_prj in lsb_dependencies:
+        if project in lsb_dependencies[dep_prj]:
+            dep_found = True
+            break
+
+    # If it is, save its tarball.
+    if dep_found:
         prj_name = "%s-%s" % (project, arch)
 
         builder.addStep(ShellCommand(
@@ -627,10 +637,7 @@ for arch in lsb_archs:
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
                                name="clear-results-dir", workdir=prj))
 
-        if prj in lsb_dependencies:
-            locks = [dep_job_lock.access('counting')]
-        else:
-            locks = [nondep_job_lock.access('counting')]
+        locks = [nondep_job_lock.access('counting')]
 
         lsb_builds.append(
             { 'name': '%s-%s' % (prj, build_arch), 'slavenames': buildslaves,
@@ -694,10 +701,7 @@ for arch in lsb_archs:
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
                                name="clear-results-dir"))
 
-        if prj in lsb_dependencies:
-            locks = [dep_job_lock.access('counting')]
-        else:
-            locks = [nondep_job_lock.access('counting')]
+        locks = [nondep_job_lock.access('counting')]
         if repo in repo_locks:
             locks.append(repo_locks[repo].access('counting'))
 
@@ -781,10 +785,7 @@ for arch in lsb_archs:
 
     add_post_dependency_triggers("libbat", arch, libbat)
 
-    if "libbat" in lsb_dependencies:
-        locks = [dep_job_lock.access('counting')]
-    else:
-        locks = [nondep_job_lock.access('counting')]
+    locks = [nondep_job_lock.access('counting')]
 
     lsb_builds.append(
         { 'name': 'libbat-' + arch, 'slavenames': buildslaves,
@@ -886,10 +887,7 @@ for arch in lsb_archs:
 
     add_post_dependency_triggers("appbat", arch, appbat)
 
-    if "appbat" in lsb_dependencies:
-        locks = [dep_job_lock.access('counting')]
-    else:
-        locks = [nondep_job_lock.access('counting')]
+    locks = [nondep_job_lock.access('counting')]
 
     lsb_builds.append(
         { 'name': 'appbat-' + arch, 'slavenames': buildslaves,
