Don't fail when not all projects have dependencies.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -168,38 +168,39 @@ def add_pre_dependency_triggers(project, arch, builder):
     remove_old_libbat_command = \
         "rpm -qa --queryformat '%{NAME}\\n' | grep libbat | " + \
         "xargs sudo rpm -e"
-    for dep in lsb_dependencies[project]:
-        # First, see if we need this from devel always.
-        always_devel = True
-        for branch in branch_watch_list.keys():
-            if dep in branch_watch_list[branch]:
+    if project in lsb_dependencies:
+        for dep in lsb_dependencies[project]:
+            # First, see if we need this from devel always.
+            always_devel = True
+            for branch in branch_watch_list.keys():
+                if dep in branch_watch_list[branch]:
+                    always_devel = False
+                    break
+
+            # If this is libbat, add a step to remove all libbat-like
+            # packages and force not-devel.
+            if dep == "libbat":
+                builder.addStep(ShellCommand(command=remove_old_libbat_command,
+                                             name="remove-old-libbat",
+                                             flunkOnFailure=False,
+                                             haltOnFailure=False,
+                                             workdir="deps"))
                 always_devel = False
-                break
 
-        # If this is libbat, add a step to remove all libbat-like
-        # packages and force not-devel.
-        if dep == "libbat":
-            builder.addStep(ShellCommand(command=remove_old_libbat_command,
-                                         name="remove-old-libbat",
-                                         flunkOnFailure=False,
-                                         haltOnFailure=False,
+            if always_devel:
+                unpack_command="tar xzvf ../../saved/devel/%s-%s.tar.gz" % (dep, arch)
+            else:
+                unpack_command=WithProperties("tar xzvf ../../saved/%%(branch_name:-devel)s/%s-%s.tar.gz" % (dep, arch))
+            builder.addStep(ShellCommand(command=unpack_command, 
+                                         name="unpack-dep-%s-%s" % (dep, arch),
                                          workdir="deps"))
-            always_devel = False
-
-        if always_devel:
-            unpack_command="tar xzvf ../../saved/devel/%s-%s.tar.gz" % (dep, arch)
-        else:
-            unpack_command=WithProperties("tar xzvf ../../saved/%%(branch_name:-devel)s/%s-%s.tar.gz" % (dep, arch))
-        builder.addStep(ShellCommand(command=unpack_command, 
-                                     name="unpack-dep-%s-%s" % (dep, arch),
-                                     workdir="deps"))
-        builder.addStep(ShellCommand(
-            command=pkg_install_command,
-            name="install-dep-%s-%s" % (dep, arch), locks=[pkg_lock],
-            workdir="deps", haltOnFailure=True))
-        builder.addStep(ShellCommand(
-            command=["rm", "-rf", "../deps"],
-            name="remove-dep-%s-%s" % (dep, arch), alwaysRun=True))
+            builder.addStep(ShellCommand(
+                command=pkg_install_command,
+                name="install-dep-%s-%s" % (dep, arch), locks=[pkg_lock],
+                workdir="deps", haltOnFailure=True))
+            builder.addStep(ShellCommand(
+                command=["rm", "-rf", "../deps"],
+                name="remove-dep-%s-%s" % (dep, arch), alwaysRun=True))
 
 def add_post_dependency_triggers(project, arch, builder):
     # Figure out if the project is a dependency of something.
