Add optional package list for dependent projects.
Not actually used yet; first testing that the data format change doesn't
break anything.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -107,7 +107,8 @@ lsb_arch_indep_projects = ["lsb-setup", "lsbappchk-perl", "lsbappchk-python",
 # the list of packages which it needs to build.  For example, if you need
 # "foo" to build "bar", you'd do "bar": ["foo"].  Dependencies cannot be
 # recursive, as this could cause builder deadlocks.
-lsb_dependencies = { "appbat": ["tet-harness", "libbat", "misc-test"],
+lsb_dependencies = { "appbat": ["tet-harness", "libbat",
+                                ("misc-test", ["lsb-appchk"])],
                      "libstdcpp-test": ["qmtest-harness"],
                      "azov-qt3-tests": ["tet-harness"],
                      "azov-qt4-tests": ["tet-harness"],
@@ -169,7 +170,14 @@ def add_pre_dependency_triggers(project, arch, builder):
         "rpm -qa --queryformat '%{NAME}\\n' | grep libbat | " + \
         "xargs sudo rpm -e"
     if project in lsb_dependencies:
-        for dep in lsb_dependencies[project]:
+        for dep_entry in lsb_dependencies[project]:
+            # Figure out whether we only need individual pkgs.
+            if isinstance(dep_entry, tuple):
+                (dep, dep_pkg_list) = dep_entry
+            else:
+                dep = dep_entry
+                dep_pkg_list = None
+
             # First, see if we need this from devel always.
             always_devel = True
             for branch in branch_watch_list.keys():
@@ -206,7 +214,11 @@ def add_post_dependency_triggers(project, arch, builder):
     # Figure out if the project is a dependency of something.
     dep_found = False
     for dep_prj in lsb_dependencies:
-        if project in lsb_dependencies[dep_prj]:
+        dep_prj_deps = [x for x in lsb_dependencies[dep_prj]
+                        if not isinstance(x, tuple)] + \
+                       [x[0] for x in lsb_dependencies[dep_prj]
+                        if isinstance(x, tuple)]
+        if project in dep_prj_deps:
             dep_found = True
             break
 
