Allow dependency installation to be limited to named packages.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -106,7 +106,10 @@ lsb_arch_indep_projects = ["lsb-setup", "lsbappchk-perl", "lsbappchk-python",
 # Dependencies.  The key is the package being built, and the values are
 # the list of packages which it needs to build.  For example, if you need
 # "foo" to build "bar", you'd do "bar": ["foo"].  Dependencies cannot be
-# recursive, as this could cause builder deadlocks.
+# recursive, as this could cause builder deadlocks.  Each dependency can
+# be just the name of a project, or a 2-tuple with the name of the project
+# and the packages to actually install in a list; each package name is
+# used in a "<name>*.rpm" search to find the packages.
 lsb_dependencies = { "appbat": ["tet-harness", "libbat",
                                 ("misc-test", ["lsb-appchk"])],
                      "libstdcpp-test": ["qmtest-harness"],
@@ -164,7 +167,7 @@ devchk_build_slaves = ["fedora-x86", "fedora-x86_64"]
 
 def add_pre_dependency_triggers(project, arch, builder):
     pkg_install_command = \
-        "ls results/*.rpm | egrep -v src.rpm | " + \
+        "ls results/%s*.rpm | egrep -v src.rpm | " + \
         "xargs sudo rpm -Uvh --force"
     remove_old_libbat_command = \
         "rpm -qa --queryformat '%{NAME}\\n' | grep libbat | " + \
@@ -176,7 +179,7 @@ def add_pre_dependency_triggers(project, arch, builder):
                 (dep, dep_pkg_list) = dep_entry
             else:
                 dep = dep_entry
-                dep_pkg_list = None
+                dep_pkg_list = [""]
 
             # First, see if we need this from devel always.
             always_devel = True
@@ -202,10 +205,17 @@ def add_pre_dependency_triggers(project, arch, builder):
             builder.addStep(ShellCommand(command=unpack_command, 
                                          name="unpack-dep-%s-%s" % (dep, arch),
                                          workdir="deps"))
-            builder.addStep(ShellCommand(
-                command=pkg_install_command,
-                name="install-dep-%s-%s" % (dep, arch), locks=[pkg_lock],
-                workdir="deps", haltOnFailure=True))
+
+            for dep_pkg in dep_pkg_list:
+                if dep_pkg:
+                    dep_pkg_name = dep_pkg
+                else:
+                    dep_pkg_name = "all"
+                builder.addStep(ShellCommand(
+                    command=pkg_install_command % dep_pkg,
+                    name="install-dep-%s-%s-%s" % (dep, dep_pkg_name, arch),
+                    locks=[pkg_lock], workdir="deps", haltOnFailure=True))
+
             builder.addStep(ShellCommand(
                 command=["rm", "-rf", "../deps"],
                 name="remove-dep-%s-%s" % (dep, arch), alwaysRun=True))
