make devchk collect-results not look like failure

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -941,7 +941,7 @@ for build_slave in devchk_build_slaves:
     devchk.addStep(ShellCommand(command="cd ts/devchk && ./dodevchk",
                                 workdir="devchk", name="build",
                                 flunkOnFailure=False))
-    devchk.addStep(ShellCommand(command="cp ts/devchk/*.output ts/devchk/*.sql ../results",
+    devchk.addStep(ShellCommand(command="cp ts/devchk/*.output ts/devchk/*.sql ../results || true",
                                 workdir="devchk", name="collect-results",
                                 flunkOnFailure=False))
     devchk.addStep(ShellCommand(command="test $(ls ../results | wc -l) -gt 0",
