Accept devchk commit messages as change sources.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -311,7 +311,8 @@ c['slavePortnum'] = 9989
 
 branch_map = {}
 lsb_change_sources = lsb_pkg_subdir_projects.keys() + \
-    [x[1] for x in lsb_packaging_projects if x[1] is not None] + ["appbat"]
+    [x[1] for x in lsb_packaging_projects if x[1] is not None] + \
+    ["appbat", "devchk"]
 added = []
 for project in lsb_change_sources:
     if project in added:
