Move the list of devchk build slaves to a separate file.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -160,8 +160,12 @@ build_timeout_seconds = build_timeout_hours * 60 * 60
 # "devchk build slaves".  These are build slaves that only build devchk.
 # We do this because devchk requires a lot of packages that can interfere
 # with clean builds of everything else.  It's also useful to have devchk
-# run against a number of different native build environments.
-devchk_build_slaves = ["fedora-x86", "fedora-x86_64"]
+# run against a number of different native build environments.  Because
+# we use the list of build slaves in a number of places, we keep the
+# master list in a separate file.
+devchk_build_slaves = \
+    [x for x in open("/opt/buildbot/buildbot_config/devchk_build_slave_list")
+     if x]
 
 # Helper functions
 
