Add support for devchk in MultiScheduler/start_lsb_build.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -364,6 +364,10 @@ for prj in arch_prj_list:
         for arch in lsb_archs:
             multi_builder_list.append("%s-%s" % (prj, arch))
 
+for devchk_job in ["devchk", "build-sdk"]:
+    multi_builder_list.extend([devchk_job + "-" + x 
+                               for x in devchk_build_slaves])
+
 jobdir_repos = dict(lsb_packaging_projects)
 jobdir_repos["build-sdk"] = "build_env"
 jobdir_repos["libbat"] = "appbat"
@@ -372,7 +376,8 @@ sch_jobdir = lfbuildbot.MultiScheduler(
     name="sch_jobdir", builderNames=multi_builder_list, 
     jobdir="/opt/buildbot/jobdir", repos=jobdir_repos, archs=lsb_archs, 
     indep_prj=lsb_arch_indep_projects,
-    indep_arch=lsb_buildslave_arch_indep_arch)
+    indep_arch=lsb_buildslave_arch_indep_arch,
+    devchk_builders=devchk_build_slaves)
 
 # Schedulers for devchk.  The builders and build slaves are entirely
 # separate from the rest of the builders and slaves, and so need their
