Fix typos, whitespace issues.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -164,7 +164,7 @@ build_timeout_seconds = build_timeout_hours * 60 * 60
 # we use the list of build slaves in a number of places, we keep the
 # master list in a separate file.
 devchk_build_slaves = \
-    [x for x in open("/opt/buildbot/buildbot_config/devchk_build_slave_list")
+    [x.strip() for x in open("/opt/buildbot/buildbot-config/devchk_build_slave_list")
      if x]
 
 # Helper functions
