Make revisions in the web view into links to loggerhead.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -3,7 +3,7 @@
 
 import os
 
-from buildbot import scheduler, locks
+from buildbot import scheduler, locks, revlinks
 from buildbot.buildslave import BuildSlave
 from buildbot.process import factory
 from buildbot.steps import trigger
@@ -1044,3 +1044,13 @@ c['projectURL'] = "http://www.linuxbase.org/"
 # without some help.
 
 c['buildbotURL'] = "http://www.linuxbase.org/buildbot/"
+
+
+####### MISCELLANEOUS
+
+# Make revisions in buildbot web status link to version control
+# web viewer.
+
+c['revlink'] = revlinks.RevlinkMatch(
+    [r'/var/www/bzr/(.*)'],
+    r'https://bzr.linuxfoundation.org/loggerhead/\1/revision/%s')
