--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -40,12 +40,19 @@ except ImportError:
 web_htpasswd_path = "/opt/buildbot/htpasswd"
 bzr_toplevel = "http://bzr.linuxfoundation.org/"
 
-# Timers and timeouts for builds.  We define them as hours here,
-# and translate them into seconds below for buildbot's benefit.
+# Timers and timeouts for builds.  We define them as hours and minutes
+# here, and translate them into seconds below for buildbot's benefit.
 stable_timer_hours = 1
+stable_timer_minutes = 0
+
 slow_stable_timer_hours = 6
+slow_stable_timer_minutes = 0
+
 bzr_timeout_hours = 4
+bzr_timeout_minutes = 0
+
 build_timeout_hours = 4
+build_timeout_minutes = 0
 
 # Supported architectures.
 lsb_archs = ["x86_64", "x86", "ia64", "ppc32", "ppc64", "s390", "s390x"]
@@ -158,10 +165,14 @@ branch_watch_list = { "4.0": [ "appbat", "azov-qt3-tests", "azov-qt4-tests",
                                "t2c-alsa-tests", "t2c-desktop-tests"] }
 
 # Values calculated from configured variables.
-stable_timer_seconds = stable_timer_hours * 60 * 60
-slow_stable_timer_seconds = slow_stable_timer_hours * 60 * 60
-bzr_timeout_seconds = bzr_timeout_hours * 60 * 60
-build_timeout_seconds = build_timeout_hours * 60 * 60
+stable_timer_seconds = \
+    (stable_timer_hours * 3600) + (stable_timer_minutes * 60)
+slow_stable_timer_seconds = \
+    (slow_stable_timer_hours * 3600) + (slow_stable_timer_minutes * 60)
+bzr_timeout_seconds = \
+    (bzr_timeout_hours * 3600) + (bzr_timeout_minutes * 60)
+build_timeout_seconds = \
+    (build_timeout_hours * 3600) + (build_timeout_minutes * 60)
 
 # "devchk build slaves".  These are build slaves that only build devchk.
 # We do this because devchk requires a lot of packages that can interfere
