Drop the scheduler timeout way down for low-resource architectures.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -412,17 +412,25 @@ sch_devchk = scheduler.Scheduler(name="sch-devchk",
                                  builderNames=devchk_builder_list,
                                  treeStableTimer=stable_timer_seconds)
 
-# SDK scheduler.
+# SDK schedulers.  We use a different timeout for the low-resource
+# architectures, and thus a different scheduler.
 
-sdk_builder_list = ["build-sdk-" + x for x in lsb_archs + devchk_build_slaves]
+sdk_builder_list = ["build-sdk-" + x
+                    for x in lsb_archs + devchk_build_slaves
+                    if x not in low_resource_archs]
+low_sdk_builder_list = ["build-sdk-" + x for x in low_resource_archs]
 sch_sdk = scheduler.Scheduler(name="sch-build-sdk",
                               branch="lsb/devel/build_env",
                               builderNames=sdk_builder_list,
                               treeStableTimer=stable_timer_seconds)
+sch_sdk_low = scheduler.Scheduler(name="sch-build-sdk-low",
+                                  branch="lsb/devel/build_env",
+                                  builderNames=low_sdk_builder_list,
+                                  treeStableTimer=slow_stable_timer_seconds)
 
 # Set up first static set of schedulers.
 
-c['schedulers'] = [sch_jobdir, sch_devchk, sch_sdk]
+c['schedulers'] = [sch_jobdir, sch_devchk, sch_sdk, sch_sdk_low]
 if ForceScheduler:
     c['schedulers'].append(sch_force)
 
