Stop the appbat build if configure fails (bug 3738).

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -882,7 +882,8 @@ for arch in lsb_archs:
     appbat.addStep(
         lfbuildbot.LSBConfigureAppbat(command=["./configure"],
                                       env={"PATH": "/opt/lsb/bin:/opt/lsb/appbat/bin:/bin:/usr/bin:/usr/local/bin"},
-                                      workdir="appbat", name="configure"))
+                                      workdir="appbat", name="configure",
+                                      flunkOnFailure=True, haltOnFailure=True))
     appbat.addStep(ShellCommand(command=["extras/entitycheck.py", "-c",
                                          "--delete-bad"],
                                 workdir="appbat", name="check-pkgcache",
