Copy SDK tarballs to the saved area, just like other dependencies.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -607,6 +607,19 @@ for slave_id in lsb_archs + devchk_build_slaves:
     build_sdk.addStep(ShellCommand(command=['tar', 'czvf', '../sdk-results.tar.gz',
                                             '../sdk-results'],
                                    name="pack-sdk", workdir="build_env"))
+    build_sdk.addStep(ShellCommand(
+        command=["mkdir", "-p",
+                 WithProperties("../../saved/%(result_type:-devel)s")],
+        name="create-saved-sdk-dir", workdir="build_env"))
+    build_sdk.addStep(ShellCommand(
+        command=["rm", "-f", 
+                 WithProperties("../../saved/%(result_type:-devel)s/sdk.tar.gz")],
+        name="remove-old-saved-sdk-tarball", workdir="build_env"))
+    build_sdk.addStep(ShellCommand(
+        command=["cp", "../sdk-results.tar.gz",
+                 WithProperties("../../saved/%(result_type:-devel)s/sdk.tar.gz")],
+        name="save-sdk-tarball", workdir="build_env"))
+
     if slave_id in lsb_archs:
         build_sdk.addStep(
             FileUpload(slavesrc="../sdk-results.tar.gz", 
