Watch new 4.1 branch for olver-core.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -160,7 +160,8 @@ branch_watch_list = { "4.0": [ "appbat", "azov-qt3-tests", "azov-qt4-tests",
                                "t2c-cpp-tests", "t2c-desktop-tests", 
                                "xml-test", "xts5-test" ],
                       "4.1": [ "appbat", "azov-qt3-tests", "desktop-test",
-                               "libstdcpp-test", "misc-test", "perl-test",
+                               "libstdcpp-test", "misc-test",
+                               "olver-core-tests", "perl-test",
                                "printing-test", "python-test", "runtime-test", 
                                "t2c-alsa-tests", "t2c-desktop-tests"] }
 
