Remove lsbdev-runner project.
The lsb-runner package is now built as part of lsb-build in build-sdk.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -110,8 +110,7 @@ lsb_pkg_subdir_projects = { "app-checker": [],
 # "Packaging" projects.  These are built out of a tree called "packaging".
 # The name of the project in packaging is the first value of each tuple,
 # while the repository used to build it is the second.
-lsb_packaging_projects = [("lsbdev-runner", "build_env"),
-                          ("lsb-xdg-utils", None)]
+lsb_packaging_projects = [("lsb-xdg-utils", None)]
 
 lsb_arch_indep_projects = ["lsb-setup", "lsbappchk-perl", "lsbappchk-python", 
                            "lsbappchk-sh", "perl-test", "task-pkgs"]
