Tweaks to the appbat and libbat builds.
 - Always copy the package cache back, even on failed builds.

 - Make the download phase a separate step so it can be managed
   separately.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -815,13 +815,16 @@ for arch in lsb_archs:
     libbat.addStep(ShellCommand(command="rm -f /tmp/appbat-pkgcache/*",
                                 workdir="appbat", name="clear-pkgcache",
                                 flunkOnFailure=False, haltOnFailure=False))
-    libbat.addStep(
-        lfbuildbot.LSBConfigureAppbat(command=["./configure.libbat"],
-                                      workdir="appbat", name="configure"))
     libbat.addStep(ShellCommand(command=["extras/entitycheck.py", "-c",
                                          "--delete-bad"],
                                 workdir="appbat", name="check-pkgcache",
                                 flunkOnFailure=False, haltOnFailure=False))
+    libbat.addStep(ShellCommand(command=["extras/entitycheck.py", "-q", "-f"],
+                                workdir="appbat", name="download-pkgs",
+                                flunkOnFailure=False, haltOnFailure=False))
+    libbat.addStep(
+        lfbuildbot.LSBConfigureAppbat(command=["./configure.libbat"],
+                                      workdir="appbat", name="configure"))
     libbat.addStep(
         lfbuildbot.LSBBuildAppbat(command="make libbat ENTITYCHECK_QUIET=-q", 
                                   workdir="appbat", name="build-libbat",
@@ -846,7 +849,8 @@ for arch in lsb_archs:
     libbat.addStep(
         ShellCommand(command="cp packages/*tar* /tmp/appbat-pkgcache",
                      workdir="appbat", name="save-pkgcache",
-                     flunkOnFailure=False, haltOnFailure=False))
+                     flunkOnFailure=False, haltOnFailure=False,
+                     alwaysRun=True))
     libbat.addStep(ShellCommand(command=["make", "clean"],
                                 workdir="appbat", name="clean",
                                 alwaysRun=True))
@@ -892,15 +896,18 @@ for arch in lsb_archs:
     appbat.addStep(ShellCommand(command="rm -f /tmp/appbat-pkgcache/*",
                                 workdir="appbat", name="clear-pkgcache",
                                 flunkOnFailure=False, haltOnFailure=False))
+    appbat.addStep(ShellCommand(command=["extras/entitycheck.py", "-c",
+                                         "--delete-bad"],
+                                workdir="appbat", name="check-pkgcache",
+                                flunkOnFailure=False, haltOnFailure=False))
+    appbat.addStep(ShellCommand(command=["extras/entitycheck.py", "-q", "-f"],
+                                workdir="appbat", name="download-pkgs",
+                                flunkOnFailure=False, haltOnFailure=False))
     appbat.addStep(
         lfbuildbot.LSBConfigureAppbat(command=["./configure"],
                                       env={"PATH": "/opt/lsb/bin:/opt/lsb/appbat/bin:/bin:/usr/bin:/usr/local/bin"},
                                       workdir="appbat", name="configure",
                                       flunkOnFailure=True, haltOnFailure=True))
-    appbat.addStep(ShellCommand(command=["extras/entitycheck.py", "-c",
-                                         "--delete-bad"],
-                                workdir="appbat", name="check-pkgcache",
-                                flunkOnFailure=False, haltOnFailure=False))
     appbat.addStep(
         lfbuildbot.LSBBuildAppbat(command="make appbat ENTITYCHECK_QUIET=-q", 
                                   env={"PATH": "/opt/lsb/bin:/opt/lsb/appbat/bin:/bin:/usr/bin:/usr/local/bin"},
@@ -949,7 +956,8 @@ for arch in lsb_archs:
     appbat.addStep(
         ShellCommand(command="cp packages/*tar* /tmp/appbat-pkgcache",
                      workdir="appbat", name="save-pkgcache",
-                     flunkOnFailure=False, haltOnFailure=False))
+                     flunkOnFailure=False, haltOnFailure=False,
+                     alwaysRun=True))
     appbat.addStep(ShellCommand(command=["make", "clean"],
                                 workdir="appbat", name="clean",
                                 alwaysRun=True))
